# cargo-nw

./: .gitignore  Cargo.toml  README.md  check
resources/init/: .gitignore
resources/init/advanced-rs/: .gitignore  Cargo.toml  Cargo.toml.template  build.ps1  build.sh  package.json
resources/init/advanced-rs/app/: index.html  secondary.html
resources/init/advanced-rs/src/: lib.rs
resources/init/basic-js/: .gitignore  index.js  nw.toml
resources/init/basic-rs/: .gitignore  Cargo.toml  Cargo.toml.template  index.js
resources/init/basic-rs/app/: index.html
resources/init/basic-rs/src/: lib.rs
resources/init/generic-js/app/: index.html
resources/init/generic-rs/: Cargo.toml  build.ps1  build.sh  index.html  index.js  nw.toml  package.json
resources/init/generic-rs/app/: index.html
resources/init/generic-rs/src/: lib.rs
src/: action.rs  archive.rs  build.rs  builder.rs  context.rs  copy.rs  darwin.rs  deps.rs  dmg.rs  error.rs  exec.rs  extern.rs  images.rs  init.rs  installer.rs  log.rs  main.rs  manifest.rs  platform.rs  prelude.rs  runner.rs  script.rs  signatures.rs  tpl.rs  utils.rs
src/init/: advanced_rs.rs  basic_js.rs  basic_rs.rs  generic_js.rs  generic_rs.rs  mod.rs
src/linux/: desktop.rs  linux.rs  mod.rs  snap.rs
src/macos/: dmg.rs  macos.rs  mod.rs
src/windows/: innosetup.rs  iss.rs  mod.rs  windows.rs
test/: background.toml  basic.toml  nw.toml  nwjs.toml  window.toml
test/background/: index.html  index.js  package.json
test/root/: index.html  index.js  package.json
test/window/: index.html  index.js
