[package]
name = "cargo-nw"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/aspectron/cargo-nw"
documentation = "https://cargo-nw.aspectron.org"
authors = ["Anton Yemelyanov <anton.yemelyanov@gmail.com>", "Surinder Singh Matoo Mattaur <surinder83singh@gmail.com>"]
keywords = ["cargo", "subcommand", "installation", "package","nwjs","nw"]
categories = ["command-line-utilities", "development-tools::cargo-plugins", "development-tools::build-utils"]
exclude = ["/.*", "/test"]
description = """
Cargo subcommand for building Node Webkit application deployment packages
(redistributables) for Windows, MacOS and Linux.
"""

[features]
test = []
unix = []
standalone = []
multiplatform = []
default = []
# default = ["test"]
# default = ["test","unix"]
# default = ["test","unix","multiplatform"]

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.64"
cfg-if = "1.0.0"
chrono = "0.4.23"
# clap = { version = "3.2.17", features = ["derive"] }
clap = { version = "4.1.4", features = ["derive"] }
console = "0.15.5"
convert_case = "0.6.0"
duct = "0.13.6"
flate2 = "1.0.25"
fs_extra = "1.2.0"
globset = "0.4.10"
home = "0.5.4"
ico = "0.3.0"
ignore = "0.4.20"
image = "0.24.5"
question = "0.2.2"
regex = "1.7.1"
reqwest = "0.11.14"
serde = { version = "1.0.152" , features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"
sha2 = "0.10.6"
tar = "0.4.38"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.1"
trauma = "2.2.0"
uuid = { version = "1.3.0", features = ["v4"] }
walkdir = "2.3.2"
winres-edit = "0.1.0"
zip = "0.6.4"