[package]
name = "cargo-nw"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aspectron/cargo-nw"
documentation = "https://cargo-nw.aspectron.org"
authors = ["Anton Yemelyanov <anton.yemelyanov@gmail.com>", "Surinder Singh Matoo Mattaur <surinder83singh@gmail.com>"]
keywords = ["cargo", "subcommand", "installation", "package","nwjs","nw"]
categories = ["command-line-utilities", "development-tools::cargo-plugins", "development-tools::build-utils"]
include = [
    "src/**/*.rs",
    "resources/init/*/src/*.rs",
    "resources/init/*/app/*.html",
    "resources/init/*/app/*.js",
    "resources/init/*/*.toml.template",
    "resources/init/*/*.toml",
    "resources/init/*/*.sh",
    "resources/init/*/*.ps1",
    "resources/init/*/*.js",
    "resources/init/*/*.json",
    "resources/init/*/.gitignore",
    "resources/images/*.png",
    "resources/images/.gitignore",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
]
description = """
Cargo subcommand for building NW application deployment packages
(redistributables) for Windows, MacOS and Linux.
"""

[features]
test = []
unix = []
standalone = []
multiplatform = []
default = []
# default = ["test"]
# default = ["test","unix"]
# default = ["test","unix","multiplatform"]

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.71"
cfg-if = "1.0.0"
chrono = "0.4.26"
clap = { version = "4.3.14", features = ["derive"] }
console = "0.15.7"
convert_case = "0.6.0"
duct = "0.13.6"
flate2 = "1.0.26"
fs_extra = "1.3.0"
globset = "0.4.11"
home = "0.5.5"
ico = "0.3.0"
ignore = "0.4.20"
image = "0.24.6"
question = "0.2.2"
regex = "1.9.1"
reqwest = "0.11.18"
serde = { version = "1.0.171" , features = ["derive"] }
serde_json = "1.0.103"
serde_yaml = "0.9.24"
sha2 = "0.10.7"
tar = "0.4.39"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.6"
trauma = "2.2.3"
uuid = { version = "1.4.1", features = ["v4"] }
walkdir = "2.3.3"
winres-edit = "0.2.0"
zip = "0.6.6"